# gibz_aufgaben

./: .gitignore  README.md
M100/: Aufprallgeschwindigkeit.xlsx
M104/M104_Block4_2021_12_10/: Datenabfrage19_Vorgabe.accdb  Datenabfrage20_Vorgabe.accdb  Nordwind.accdb  OnLine_w3schools.url  SQL lernen.url
M104/M104_Block5_2021_12_17/: 22_Formular_erzeugen_bearbeiten.url  22_ImmobilienbueroFormularlayout.accdb  24_Benutzerschnittstelle.accdb  25_Aufgabe_Bibliothek.accdb  26_Bericht_Bibliothek.accdb  27_Formulargestaltung.accdb  28_Musikarchiv11.accdb
M117/: Themen.md
M117/S06/: RAID.md
M117/SW01/: Buch_M117_v09.docx  Dienstprogramme.docx
M117/SW02/: M117_Netzwerk_Grundlagen_MAC.pptx
M117/SW04/: Buch_M117_v09.docx  (+1 more)
M122/: CheetsheetPS.docx  pr2_m122.md
M123/: Begriffe.md  README.md
M133/: README.md  docker-compose.yml
M153/: Dockerfile  README.md  deploy.sh  docker-compose.yml  init-3nf.sql  requirements.txt  start.sh
M226A/: Association.md  Generics.md  README.md  zusammenfassung_prüfung.docx  ~$sammenfassung_prüfung.docx
M306/: M306-U-Anforderungen-unterscheiden-01.docx  M306-U-Aufgabe-Projektrollen-01.docx  M306-U-Phasen-Ergebnisse-01.docx  M306-U-Projektbericht-erstellen-01.docx  M306-U-Projekte-erkennen-01.docx  M306-U-Situationen-um-Projekt-01.docx  M306-U-Zweckmässige Projektziele-01.docx  Projektauftrag_Hermes_22.docx  ~$ungspruefung2_Modul306_100418_Version_A.docx  Übungspruefung2_Modul306_100418_Version_A.docx
M411/: http_req.c
M411/3_Themen/03_Array/Examples/: CMakeLists.txt  FunkArraysApp.cpp  StringEinAusgabe.cpp  Ueberlauf.cpp
(+286 files in other folders)
